--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Michael Alonso's' Website</title>
+    </head>
+    <body>
+        <h1>
+            This is easy and fun!
+        </h1>
+    </body>
+</html>
