--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ><head><img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwimwqXn_4LhAhVRQ6wKHdyKADkQjRx6BAgBEAU&url=https%3A%2F%2Fwww.seriouseats.com%2Frecipes%2F2018%2F07%2Fno-churn-vanilla-ice-cream.html&psig=AOvVaw1pd61bYudbHttmKOcuaNJS&ust=1552699843169623" alt="Picture of Ice Cream" />
+<html ><head><img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiwyorLgYPhAhVReawKHcRvAxgQjRx6BAgBEAU&url=https%3A%2F%2Fwww.kingarthurflour.com%2Frecipes%2Fvanilla-bean-ice-cream-recipe&psig=AOvVaw3rVvknE3NwgxKopaM2i92Q&ust=1552700161742534" alt="Picture of Ice Cream" />
 meta charset=utf-8" /><title>I Scream For Ice Cream!</title></head>
 <body>
         <h1>Most Popular Ice Cream Flavors</h1>
