--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html ><head><link href="style.css" rel="stylesheet" type="text/css" /><img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiwyorLgYPhAhVReawKHcRvAxgQjRx6BAgBEAU&url=https%3A%2F%2Fwww.kingarthurflour.com%2Frecipes%2Fvanilla-bean-ice-cream-recipe&psig=AOvVaw3rVvknE3NwgxKopaM2i92Q&ust=1552700161742534" alt="Picture of Ice Cream" />
-meta charset=utf-8" /><title>I Scream For Ice Cream!</title></head>
+meta charset=utf-8" /><title>I Scream For Ice Cream!</title> <style>
+td {color:#FF0000;}
+</style></head>
 <body>
         <h1>Most Popular Ice Cream Flavors</h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
