--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@ td {color:#FF00D1;}
         <tr><td>2</td><td>Strawberry</td></tr>
         <tr><td>3</td><td>Chocolate</td></tr>
         <tr><td>4</td><td>Cookies and Cream</td></tr>
+        <tr><td>4</td><td>rainbow sherbert</td></tr>
         <tr><td>5</td><td>Mint Chocolate Chip</td></tr></table>
