--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ meta charset=utf-8" /><title>My Favorite Bands!</title> <style>
 td {color:#000000;}
 </style></head>
 <body>
-        <h1>My Top 5 Favorite Bands</h1>
+        <h1>Total Revenue from Release - Present</h1>
         <table><tr><th>Rank</th><th>Band</th></tr>
-        <tr><td>1</td><td>Metallica</td></tr>
-        <tr><td>2</td><td>Zac Brown Band</td></tr>
-        <tr><td>3</td><td>System of a Down</td></tr>
-        <tr><td>4</td><td>Sick Puppies</td></tr>
-        <tr><td>5</td><td>Queen</td></tr>
+        <tr><td>Pong</td><td>large number</td></tr>
+        <tr><td>Space invader</td><td>bigger number</td></tr>
+        <tr><td>Pacman</td><td>little bigger number</td></tr>
+        <tr><td>Tetris</td><td>huge number</td></tr>
+        <tr><td>Mario</td><td>massive number</td></tr>
         </table>
