--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ td {color:#000000;}
 </style></head>
 <body>
         <h1>Total Revenue from Release - Present</h1>
-        <table><tr><th>Rank</th><th>Band</th></tr>
+        <table><tr><th>Game</th><th>Revenue($)</th></tr>
         <tr><td>Pong</td><td>large number</td></tr>
         <tr><td>Space invader</td><td>bigger number</td></tr>
         <tr><td>Pacman</td><td>little bigger number</td></tr>
