--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 
-<html ><head><tr style="color:#00FF00;background-color:sienna;"><link href="style.css" rel="stylesheet" type="text/css" /  />
-meta charset=utf-8" /><title>My Favorite Bands!</title> <style>
+<html ><head><tr style="color:#00FF00;background-color:sienna;"><link href="style.css" rel="stylesheet" type="text/css" /  />" /><title>Revenue</title> <style>
 td {color:#000000;}
 </style></head>
 <body>
         <h1>Total Revenue from Release - Present</h1>
         <table><tr><th>Game</th><th>Revenue($)</th></tr>
-        <tr><td>Pong</td><td>large number</td></tr>
-        <tr><td>Space invader</td><td>bigger number</td></tr>
-        <tr><td>Pacman</td><td>little bigger number</td></tr>
-        <tr><td>Tetris</td><td>huge number</td></tr>
-        <tr><td>Mario</td><td>massive number</td></tr>
+        <tr><td>Pong</td><td>10,000,000</td></tr>
+        <tr><td>Space invader</td><td>4,600,000,000</td></tr>
+        <tr><td>Pacman</td><td>12,000,000,000</td></tr>
+        <tr><td>Tetris</td><td>5,000,000,000</td></tr>
+        <tr><td>Super Mario bros.</td><td>12,000,000,000</td></tr>
         </table>
