--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ><head><tr style="color:#00FF00;background-color:sienna;"><link href="style.css" rel="stylesheet" type="text/css" /" /><title>Revenue</title> <style>
+<html ><head><tr style="color:#00FF00;background-color:sienna;"><link href="style.css" rel="stylesheet" type="text/css" /><title>Revenue</title> <style>
 td {color:#000000;}
 </style></head>
 <body>
